# JameGam2023

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/levels/: level_1.hg  level_2.hg  level_3.hg
public/: CMakeCache.txt  JameGam.data  JameGam.html  JameGam.js  JameGam.wasm  Makefile  cmake_install.cmake  index.html  package-lock.json  package.json
src/: assets.hpp  cameraController.h  card.h  deck.h  game.hpp  map.h  renderer.h
src/components/: actor.h  lastEnemy.h  meleeEnemy.h  obstacle.h  stairs.h  tileObject.h
src/scenes/: death.h  runtime.hpp  title.h  win.h
src/utils/: dice.h  pathfinding.h
